syntax = "proto3";
package palma.test;

option java_package = "vertis.palma.test";
option java_outer_classname = "TestImagesSamples";
option java_multiple_files = true;

import "palma/palma_options.proto";
import "palma/images/images.proto";

message VerbaPhoto {
    option (palma.message).name = "verba/photo";

    string code = 1 [(palma.field).key = true];

    images.Image image = 2 [(palma.image_field) = {
        namespace: "verba"
        aliases: ["thumbnail", "offer"]
    }];
}
message NeverbaPhoto {
    option (palma.message).name = "neverba/photo";

    string code = 1 [(palma.field).key = true];

    images.Image image = 2 [(palma.image_field).namespace = "neverba", (palma.image_field).aliases = 'unknown' ];
}
